--- a/src/main/webapp/assets/theme.css
+++ b/src/main/webapp/assets/theme.css
@@ -1090,6 +1090,7 @@ body .ui-tabview.ui-tabview-bottom,
 body .ui-tabview.ui-tabview-left,
 body .ui-tabview.ui-tabview-right {
     border: 0 none;
+    height: 100%;
 }
 
 body .ui-tabview.ui-tabview-top .ui-tabview-nav,
@@ -3182,4 +3183,7 @@ body .tabelaref_of .ui-datatable .ui-datatable-data tr.ui-datatable-odd{
     background-color: #e5dede ;
 }
 
+.mensagem_dialog .ui-dialog {
+    top: 20px !important;
+}
 
